--- a/addons/hospital/views/patient_view.xml
+++ b/addons/hospital/views/patient_view.xml
@@ -3,7 +3,7 @@
             <field name="name">Patient</field>
             <field name="res_model">hospital.patient</field>
             <field name="view_type">form</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">tree,form,kanban</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">Create the first patient
                 </p>
@@ -35,6 +35,7 @@
                             <field name="age"/>
                             <field name="gender"/>
                             <field name="note"/>
+                            <field name="doctor_id"/>
                         </group>
                     </sheet>
                 </form>
@@ -57,7 +58,58 @@
             </field>
         </record>
 
+        <!-- patient kanban -->
+         <record model="ir.ui.view" id="view_hospital_patient_kanban">
+            <field name="name">hospital.patient.kanban</field>
+            <field name="model">hospital.patient</field>
+            <field name="arch" type="xml">
+                <kanban default_group_by="doctor_id">
+                    <field name="color"/>
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div
+                                    t-attf-class="oe_kanban_color_{{kanban_getcolor(record.color.raw_value)}}
+                                                  oe_kanban_global_click_edit oe_semantic_html_override
+                                                  oe_kanban_card {{record.group_fancy==1 ? 'oe_kanban_card_fancy' : ''}}">
+                                <div class="oe_dropdown_kanban">
+                                    <!-- dropdown menu -->
+                                    <div class="oe_dropdown_toggle">
+                                        <i class="fa fa-bars fa-lg" title="Manage" aria-label="Manage"/>
+                                        <ul class="oe_dropdown_menu">
+                                            <li>
+                                                <a type="delete">Delete</a>
+                                            </li>
+                                            <li>
+                                                <ul class="oe_kanban_colorpicker"
+                                                    data-field="color"/>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="oe_clear"></div>
+                                </div>
+                                <div t-attf-class="oe_kanban_content">
+                                    <!-- title -->
+                                    Name:
+                                    <field name="name"/>
+                                    <br/>
+                                    Age:
+                                    <field name="age"/>
+                                    <br/>
+                                    Gender:
+                                    <field name="gender"/>
+                                    <br/>
+                                    Age group:
+                                    <field name="age_group"/>
+                                </div>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
+            </field>
+        </record>
+
         <!-- menu -->
         <menuitem id="main_hospital_menu" name="Hospital" action="patient_list_action"/>
+        <menuitem id="patient_menu" name="Patient" parent="main_hospital_menu" action="patient_list_action"/>
 
 </odoo>
