--- a/addons/hospital/views/patient_view.xml
+++ b/addons/hospital/views/patient_view.xml
@@ -28,16 +28,21 @@
             <field name="name">patient.form</field>
             <field name="model">hospital.patient</field>
             <field name="arch" type="xml">
-                <form string="Patient Form">
+                <form string="Patients">
                     <sheet>
                         <group string="Patient information">
                             <field name="name"/>
                             <field name="age"/>
                             <field name="gender"/>
+                            <field name="age_group"/>
                             <field name="note"/>
-                            <field name="doctor_id"/>
+                            <field name="doctor_id" widget='selection'/>
                         </group>
                     </sheet>
+                    <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers"/>
+                        <field name="message_ids" widget="mail_thread"/>
+                    </div>
                 </form>
             </field>
         </record>
