--- a/addons/hospital/views/patient_view.xml
+++ b/addons/hospital/views/patient_view.xml
@@ -4,7 +4,7 @@
             <field name="res_model">hospital.patient</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form,kanban</field>
-            <field name="domain">[('doctor_id.user_ref.id', '=', uid)]</field>
+            <!-- <field name="domain">[('doctor_id.user_ref.id', '=', uid)]</field> -->
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">Create the first patient
                 </p>
