--- a/addons/hospital/views/patient_view.xml
+++ b/addons/hospital/views/patient_view.xml
@@ -32,6 +32,10 @@
             <field name="arch" type="xml">
                 <form string="Patients">
                     <sheet>
+                        <div class="oe_button_box" name="button_box">
+                            <button name="create_appointment_wizard" string="Create Appointment" type="object" 
+                                    class="oe_stat_button" icon="fa-calendar"/>
+                        </div>
                         <group string="Patient information">
                             <field name="name"/>
                             <field name="age"/>
