--- a/addons/hospital/views/patient_view.xml
+++ b/addons/hospital/views/patient_view.xml
@@ -32,7 +32,7 @@
             <field name="arch" type="xml">
                 <form string="Patients">
                     <sheet>
-                        <!-- wizard -->
+                        <!-- wizard button -->
                         <div class="oe_button_box" name="button_box">
                             <button name="create_appointment_wizard" string="Create Appointment" type="object" 
                                     class="oe_stat_button" icon="fa-calendar"/>
